--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,6 +44,7 @@ jobs:
       - name: Install Node Dependencies
         if: steps.cache-npm.outputs.cache-hit != 'true'
         run: |
+          npm cache clear --force
           npm install
       
       - name: Run tests
