--- a/contracts/System.template
+++ b/contracts/System.template
@@ -109,7 +109,7 @@ contract System {
 
   // Not reliable, do not use when need strong verify
   function isContract(address addr) internal view returns (bool) {
-    uint size;
+    uint256 size;
     assembly { size := extcodesize(addr) }
     return size > 0;
   }
