--- a/contracts/ValidatorSet.template
+++ b/contracts/ValidatorSet.template
@@ -19,6 +19,8 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
 
   uint256 public constant BLOCK_REWARD = 3e18;
   uint256 public constant BLOCK_REWARD_INCENTIVE_PERCENT = 10;
+  uint256 public constant REDUCE_FACTOR = 9639;
+  uint256 public constant SUBSIDY_REDUCE_INTERVAL = 10512000;
 
   bytes public constant INIT_VALIDATORSET_BYTES = hex"{{initValidatorSetBytes}}";
 
@@ -86,6 +88,9 @@ contract ValidatorSet is IValidatorSet, System, IParamSubscriber {
   /// @dev This method is called by the golang consensus engine every block
   /// @param valAddr The validator address
   function deposit(address valAddr) external payable onlyCoinbase onlyInit onlyZeroGasPrice {
+    if (block.number % SUBSIDY_REDUCE_INTERVAL == 0) {
+      blockReward = blockReward * REDUCE_FACTOR / 10000;
+    }
     uint256 value = msg.value;
     if (address(this).balance >= totalInCome + value + blockReward) {
       value += blockReward;
