--- a/contracts/System.template
+++ b/contracts/System.template
@@ -29,7 +29,8 @@ contract System {
     address candidateHubAddr,
     address govHubAddr,
     address pledgeAgentAddr,
-    address burnAddr
+    address burnAddr,
+    address foundationAddr
   ) external {
     VALIDATOR_CONTRACT_ADDR = valAddr;
     SLASH_CONTRACT_ADDR = slashAddr;
@@ -40,6 +41,7 @@ contract System {
     GOV_HUB_ADDR = govHubAddr;
     PLEDGE_AGENT_ADDR = pledgeAgentAddr;
     BURN_ADDR = burnAddr;
+    FOUNDATION_ADDR = foundationAddr;
   }{% else %}
   address public constant VALIDATOR_CONTRACT_ADDR = 0x0000000000000000000000000000000000001000;
   address public constant SLASH_CONTRACT_ADDR = 0x0000000000000000000000000000000000001001;
