1. In Slash, add validator existence check, 2. fix generate-govhub's new argument
Signed-off-by: charles <charles2022wood@gmail.com>

--- a/contracts/SlashIndicator.template
+++ b/contracts/SlashIndicator.template
@@ -70,6 +70,9 @@ contract SlashIndicator is ISlashIndicator,System,IParamSubscriber{
   /// This method is called by other validators from golang consensus engine.
   /// @param validator The consensus address of validator
   function slash(address validator) external onlyCoinbase onlyInit oncePerBlock onlyZeroGasPrice{
+    if (!IValidatorSet(VALIDATOR_CONTRACT_ADDR).isValidator(validator)) {
+      return;
+    }
     Indicator memory indicator = indicators[validator];
     if (indicator.exist) {
       indicator.count++;
