--- a/contracts/CandidateHub.template
+++ b/contracts/CandidateHub.template
@@ -13,11 +13,12 @@ import "./System.sol";
 /// It also exposes the method `turnRound` for the consensus engine to execute the `turn round` workflow
 contract CandidateHub is ICandidateHub, System, IParamSubscriber {
 
-  int256 public constant INIT_REQUIRED_MARGIN = 1e22;
-  int256 public constant INIT_DUES = 1e20;
+  uint256 public constant INIT_REQUIRED_MARGIN = 1e22;
+  uint256 public constant INIT_DUES = 1e20;
   uint256 public constant INIT_ROUND_INTERVAL = {{initRoundInterval}};
   uint256 public constant INIT_VALIDATOR_COUNT = {{initValidatorCount}};
   uint256 public constant MAX_COMMISSION_CHANGE = 10;
+  uint256 public constant CANDIDATE_COUNT_LIMIT = 1000;
 
   uint256 public constant SET_CANDIDATE = 1;
   uint256 public constant SET_INACTIVE = 2;
@@ -32,9 +33,9 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   uint256 public constant UNREGISTER_STATUS = SET_CANDIDATE | SET_INACTIVE | SET_MARGIN;
 
   // the refundable deposit
-  int256 public requiredMargin;
+  uint256 public requiredMargin;
   // the unregister fee
-  int256 public dues;
+  uint256 public dues;
 
   uint256 public roundInterval;
   uint256 public validatorCount;
@@ -64,7 +65,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     address consensusAddr;
     address payable feeAddr;
     uint256 commissionThousandths;
-    int256 margin;
+    uint256 margin;
     uint256 status;
     uint256 commissionLastChangeRound;
     uint256 commissionLastRoundValue;
@@ -76,11 +77,11 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   }
 
   /*********************** events **************************/
-  event registered(address indexed operateAddr, address indexed consensusAddr, address indexed feeAddress, uint256 commissionThousandths, int256 margin);
+  event registered(address indexed operateAddr, address indexed consensusAddr, address indexed feeAddress, uint256 commissionThousandths, uint256 margin);
   event unregistered(address indexed operateAddr, address indexed consensusAddr);
   event updated(address indexed operateAddr, address indexed consensusAddr, address indexed feeAddress, uint256 commissionThousandths);
-  event addedMargin(address indexed operateAddr, int256 margin, int256 totalMargin);
-  event deductedMargin(address indexed operateAddr, int256 margin, int256 totalMargin);
+  event addedMargin(address indexed operateAddr, uint256 margin, uint256 totalMargin);
+  event deductedMargin(address indexed operateAddr, uint256 margin, uint256 totalMargin);
   event statusChanged(address indexed operateAddr, uint256 oldStatus, uint256 newStatus);
   event paramChange(string key, bytes value);
 
@@ -94,13 +95,11 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     roundTag = 1;
     alreadyInit = true;
   }
-
   {% if mock %}
   function setControlRoundTimeTag(bool value) external {
     controlRoundTimeTag = value;
   }
   {% endif %}
-
   /********************* ICandidateHub interface ****************************/
   /// Whether users can delegate on a validator candidate
   /// @param agent The operator address of the validator candidate
@@ -118,27 +117,35 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   /// @param operateAddress The operator address of the validator
   /// @param round The number of rounds to jail
   /// @param fine The amount of deposits to slash
-  function jailValidator(address operateAddress, uint256 round, int256 fine) external override onlyValidator {
-    if (fine < 0) return;
-    
+  function jailValidator(address operateAddress, uint256 round, uint256 fine) external override onlyValidator {
     uint256 index = operateMap[operateAddress];
     if (index == 0) return;
 
     Candidate storage c = candidateSet[index - 1];
+    uint256 margin = c.margin;
+    if (margin >= dues && margin - dues >= fine) {
+      uint256 status = c.status | SET_JAIL;
+      // update jailMap
+      uint256 jailRound = roundTag + round;
+      if (jailRound < roundTag) jailMap[operateAddress] = type(uint256).max;
+      else jailMap[operateAddress] = jailRound;
+      // deduct margin
+      uint256 totalMargin = margin - fine;
+      c.margin = totalMargin;
+      emit deductedMargin(operateAddress, fine, totalMargin);
+      if (totalMargin < requiredMargin) {
+        status = status | SET_MARGIN;
+      }
+      changeStatus(c, status);
+      if (fine != 0) {
+        payable(SYSTEM_REWARD_ADDR).transfer(fine);
+      }
+    } else {
+      removeCandidate(index);
 
-    uint256 status = c.status | SET_JAIL;
-    // update jailMap
-    uint256 jailRound = roundTag + round;
-    if (jailRound < roundTag) jailMap[operateAddress] = type(uint256).max;
-    else jailMap[operateAddress] = jailRound;
-    // deduct margin
-    int256 totalMargin = c.margin - fine;
-    candidateSet[index - 1].margin = totalMargin;
-    emit deductedMargin(operateAddress, fine, totalMargin);
-    if (totalMargin < requiredMargin) {
-      status = status | SET_MARGIN;
+      payable(SYSTEM_REWARD_ADDR).transfer(margin);
+      emit deductedMargin(operateAddress, margin, 0);
     }
-    changeStatus(c, status);
   }
 
   /********************* External methods  ****************************/
@@ -162,7 +169,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     if (controlRoundTimeTag == false) {
     {% endif %}
     uint256 roundTimestamp = block.timestamp / roundInterval;
-    require(roundTimestamp > roundTag, "can not turn round twice in one round");
+    require(roundTimestamp > roundTag, "one round can only turn once");
     roundTag = roundTimestamp;
     {%if mock %}
     } else {
@@ -248,9 +255,10 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     external payable
     onlyInit
   {
+    require(candidateSet.length <= CANDIDATE_COUNT_LIMIT, "candidateSet is full");
     require(operateMap[msg.sender] == 0, "candidate already exists");
-    require(int256(msg.value) >= requiredMargin, "deposit is not enough");
-    require(commissionThousandths != 0 && commissionThousandths < 1000, "commissionThousandths should in range (0, 1000)");
+    require(msg.value >= requiredMargin, "deposit is not enough");
+    require(commissionThousandths != 0 && commissionThousandths < 1000, "commissionThousandths should be in (0, 1000)");
     require(consensusMap[consensusAddr] == 0, "consensus already exists");
     require(consensusAddr != address(0), "consensus address is zero");
     require(feeAddr != address(0), "fee address is zero");
@@ -258,35 +266,30 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     require(jailMap[msg.sender] < roundTag, "it is in jail");
 
     uint256 status = SET_CANDIDATE;
-    candidateSet.push(Candidate(msg.sender, consensusAddr, feeAddr, commissionThousandths, int256(msg.value), status, roundTag, commissionThousandths));
+    candidateSet.push(Candidate(msg.sender, consensusAddr, feeAddr, commissionThousandths, msg.value, status, roundTag, commissionThousandths));
     uint256 index = candidateSet.length;
     operateMap[msg.sender] = index;
     consensusMap[consensusAddr] = index;
 
-    emit registered(msg.sender, consensusAddr, feeAddr, commissionThousandths, int256(msg.value));
+    emit registered(msg.sender, consensusAddr, feeAddr, commissionThousandths, msg.value);
   }
 
   /// Unregister the validator candidate role on Core blockchain
   function unregister() external onlyInit exist {
     uint256 index = operateMap[msg.sender];
-    Candidate memory c = candidateSet[index - 1];
+    Candidate storage c = candidateSet[index - 1];
     require(c.status == (c.status & UNREGISTER_STATUS), "candidate status is not cleared");
-    require(c.margin >= dues, "margin is not enough to cover dues");
+    uint256 margin = c.margin;
 
-    delete operateMap[msg.sender];
-    delete consensusMap[c.consensusAddr];
+    removeCandidate(index);
 
-    if (index != candidateSet.length) {
-      candidateSet[index-1] = candidateSet[candidateSet.length - 1];
-      operateMap[candidateSet[index-1].operateAddr] = index;
-      consensusMap[candidateSet[index-1].consensusAddr] = index;
+    if (margin > dues) {
+      uint256 value = margin - dues;
+      msg.sender.transfer(value);
+      payable(SYSTEM_REWARD_ADDR).transfer(uint256(dues));
+    } else {
+      payable(SYSTEM_REWARD_ADDR).transfer(margin);
     }
-    candidateSet.pop();
-
-    uint256 value = uint256(c.margin - dues);
-    if (value != 0)  msg.sender.transfer(value);
-    payable(SYSTEM_REWARD_ADDR).transfer(uint256(dues));
-    emit unregistered(msg.sender, c.consensusAddr);
   }
 
   /// Update validator candidate information
@@ -344,9 +347,9 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   function addMargin() external payable onlyInit exist {
     require(msg.value != 0, "value should be not zero");
     uint256 index = operateMap[msg.sender];
-    int256 totalMargin = candidateSet[index - 1].margin + int256(msg.value);
+    uint256 totalMargin = candidateSet[index - 1].margin + msg.value;
     candidateSet[index - 1].margin = totalMargin;
-    emit addedMargin(msg.sender, int256(msg.value), totalMargin);
+    emit addedMargin(msg.sender, msg.value, totalMargin);
 
     if (totalMargin >= requiredMargin) {
       Candidate storage c = candidateSet[index - 1];
@@ -362,6 +365,22 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
       c.status = newStatus;
       statusChanged(c.operateAddr, oldStatus, newStatus);
     }
+  }
+
+  function removeCandidate(uint256 index) internal {
+    Candidate storage c = candidateSet[index - 1];
+
+    emit unregistered(c.operateAddr, c.consensusAddr);
+
+    delete operateMap[c.operateAddr];
+    delete consensusMap[c.consensusAddr];
+
+    if (index != candidateSet.length) {
+      candidateSet[index-1] = candidateSet[candidateSet.length - 1];
+      operateMap[candidateSet[index-1].operateAddr] = index;
+      consensusMap[candidateSet[index-1].consensusAddr] = index;
+    }
+    candidateSet.pop();
   }
 
   /// Rank validator candidates on hybrid score using quicksort
@@ -421,13 +440,13 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   function updateParam(string calldata key, bytes calldata value) external override onlyInit onlyGov {
     if (Memory.compareStrings(key, "requiredMargin")) {
       require(value.length == 32, "length of requiredMargin mismatch");
-      int256 newRequiredMargin = BytesToTypes.bytesToInt256(32, value);
+      uint256 newRequiredMargin = BytesToTypes.bytesToUint256(32, value);
       require(newRequiredMargin > dues, "the requiredMargin out of range");
       requiredMargin = newRequiredMargin;
     } else if (Memory.compareStrings(key, "dues")) {
       require(value.length == 32, "length of dues mismatch");
-      int256 newDues = BytesToTypes.bytesToInt256(32, value);
-      require(newDues > 0 && newDues < requiredMargin, "the dues out of range");
+      uint256 newDues = BytesToTypes.bytesToUint256(32, value);
+      require(newDues != 0 && newDues < requiredMargin, "the dues out of range");
       dues = newDues;
     } else if (Memory.compareStrings(key, "validatorCount")) {
       require(value.length == 32, "length of validatorCount mismatch");
